<resources>
    <string name="app_name">Charle House</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reserva">Reservas</string>
    <string name="menu_platillosf">Platillos Frios</string>
    <string name="menu_platillosc">Platillos Calientes</string>
    <string name="menu_acercad">Acerca de</string>
</resources>