<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reservas"
            android:title="@string/menu_reserva" />
        <item
            android:id="@+id/nav_PlatillosF"
            android:title="@string/menu_platillosf" />
        <item
            android:id="@+id/nav_platillosC"
            android:title="@string/menu_platillosc" />
        <item
            android:id="@+id/nav_acercad"
            android:title="@string/menu_acercad" />
    </group>
</menu>